Fix spacing

--- a/style.css
+++ b/style.css
@@ -136,8 +136,8 @@ section {
 }
 
 footer {
-	padding-top: 3em;
-	padding-bottom: 3em;
+	padding-top: 5em;
+	padding-bottom: 5em;
 	font-size: 0.75em;
 }
 
